--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2875,7 +2875,71 @@ hr {
   align-items: center;
   align-items: center;
 }
+.small-image-innerpage .img-small-black {
+  position: absolute;
+  width: 65px;
+  height: 65px;
+  top: -110px;
+  left: 210px;
+}
 
+.small-image-innerpage {
+  position: relative;
+}
+
+.podcast-image-innerpage {
+  height: 282px;
+}
+.img-podcast-innerpage-content {
+  position: absolute;
+}
+/* Responsive styles */
+@media (max-width: 768px) {
+  .small-image-innerpage {
+    position: relative;
+    top: 8%;
+    left: 12%;
+    right: auto;
+  }
+
+  .small-image-innerpage .img-small-black {
+    position: absolute;
+    width: 65px;
+    height: 65px;
+    top: -10px;
+    left: 5px;
+  }
+}
+
+@media (max-width: 576px) {
+  .small-image-innerpage {
+    top: 4%; /* Adjust as needed */
+    left: 8%;
+  }
+
+  .small-image-innerpage .img-small-black {
+    position: absolute;
+    width: 65px;
+    height: 65px;
+    top: 10px;
+    left: 30px;
+  }
+}
+@media (max-width: 768px) and (min-width: 577px) {
+  .img-podcast-innerpage-content {
+    position: absolute;
+    top: 200px;
+    left: 130px;
+  }
+}
+
+@media (max-width: 576px) {
+  .img-podcast-innerpage-content {
+    position: absolute;
+    top: 200px;
+    left: 40px;
+  }
+}
 .img-podcast-content {
   position: absolute;
   bottom: 0;
@@ -2975,18 +3039,7 @@ hr {
   width: 10vw;
   height: auto;
 }
-.small-image-innerpage .img-small-black {
-  width: 72px;
-  height: 72px;
-}
 
-.small-image-innerpage {
-  position: absolute;
-  top: 16%;
-  right: 10%;
-  left: 16.5%;
-  z-index: 1;
-}
 .small-image-innerpage {
   padding: 10px;
 }
@@ -3558,8 +3611,7 @@ hr {
   margin-top: 13%;
   padding: 42px 45px;
   border-radius: 50px;
-  width: 540px;
-  height: 265px;
+  height: 100%;
   background-color: #ffffff;
   z-index: 1 !important;
 }
