--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2702,23 +2702,46 @@ hr {
   border: none;
 }
 
+.page-item a.number:focus {
+  background-color: #00816d;
+  color: #ffffff;
+}
+
+.page-item.previous a:focus .pagination-word-left,
+.page-item.next a:focus .pagination-word-right {
+  color: #000000;
+}
+
+.page-item.previous a .pagination-word-left,
+.page-item.next a .pagination-word-right {
+  color: gray;
+}
+
+.page-item.previous a:active .pagination-word-left,
+.page-item.next a:active .pagination-word-right {
+  color: #000000;
+}
+
+.page-item.previous a:active .fa-arrow-left,
+.page-item.next a:active .fa-arrow-right {
+  color: #000000;
+}
+
+.page-item.previous:hover a .pagination-word-left,
+.page-item.next:hover a .pagination-word-right {
+  color: #000000;
+}
+
+.page-item.previous:hover a .fa-arrow-left,
+.page-item.next:hover a .fa-arrow-right {
+  color: #000000;
+}
+
 .page-item.active .number {
   background-color: #00816d !important;
   color: #ffffff !important;
   border-radius: 50%;
   padding: 10px;
-}
-.page-item.active .pagination-word-right {
-  color: #000000 !important;
-}
-.page-item.active .pagination-word-left {
-  color: #000000 !important;
-}
-.page-item.active .fa-arrow-right {
-  color: #000000 !important;
-}
-.page-item.active .fa-arrow-left {
-  color: #000000 !important;
 }
 
 .full-width-media-news {
@@ -2874,6 +2897,7 @@ hr {
   display: flex;
   align-items: center;
   align-items: center;
+  width: auto;
 }
 .small-image-innerpage .img-small-black {
   position: absolute;
@@ -2893,6 +2917,13 @@ hr {
 .img-podcast-innerpage-content {
   position: absolute;
 }
+.data-driven-content h3 {
+  width: auto;
+}
+.data-driven-content p {
+  width: auto;
+}
+
 /* Responsive styles */
 @media (max-width: 768px) {
   .small-image-innerpage {
@@ -2916,7 +2947,10 @@ hr {
     top: 4%; /* Adjust as needed */
     left: 8%;
   }
-
+  .data-driven-content {
+    display: flex;
+    flex-direction: column;
+  }
   .small-image-innerpage .img-small-black {
     position: absolute;
     width: 65px;
@@ -2926,6 +2960,10 @@ hr {
   }
 }
 @media (max-width: 768px) and (min-width: 577px) {
+  .data-driven-content {
+    display: flex;
+    flex-direction: column;
+  }
   .img-podcast-innerpage-content {
     position: absolute;
     top: 200px;
@@ -2988,7 +3026,7 @@ hr {
   font-weight: 700;
   color: #171d1c;
   margin-top: 8px;
-  max-height: 50px; /* Define a width for the paragraph */
+  max-height: 50px;
   overflow: hidden;
 }
 .podcast-text p {
@@ -2996,7 +3034,7 @@ hr {
   font-weight: 500;
   color: #5d6160;
   margin-top: 15px;
-  height: 80px; /* Define a width for the paragraph */
+  height: 80px;
   overflow: hidden;
 }
 .podcast-text {
@@ -3342,7 +3380,7 @@ hr {
 }
 .governmental-header .img-content-sales {
   position: absolute;
-  top: 58%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -3615,6 +3653,7 @@ hr {
   background-color: #ffffff;
   z-index: 1 !important;
 }
+
 .vacancy-details h2 {
   font-size: 16px;
   font-weight: 700;
