--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,10 @@ a:hover {
   border-radius: 20px;
   padding: 10px;
 }
+.consumer-dropdown {
+  margin-top: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
 .dropdown-lang {
   color: black;
