--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ a:hover {
 
 .navbar {
   background-color: #ffffff;
-  box-shadow: 10px 10px 10px rgba(186, 178, 178, 0.3);
+  box-shadow: 8px 8px 8px rgba(186, 178, 178, 0.3);
 }
 
 .p-100 {
@@ -200,9 +200,11 @@ a:hover {
 }
 .consumer-features .news-item {
   padding-left: 33px;
+  padding-right: 35px;
 }
 .consumer-features .product-magazine {
   padding-left: 33px;
+  padding-right: 33px;
 }
 .consumer-features .list-unstyled a {
   color: #000000;
@@ -219,7 +221,8 @@ a:hover {
   margin-top: 33px;
 }
 .carrer-nav-left {
-  margin-left: 3rem !important;
+  margin-left: 45px !important;
+  margin-right: 30px;
 }
 .imaeg-dropdown {
   width: 93%;
@@ -253,12 +256,15 @@ a:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.dropdown-lang {
+.dropdown-menu .dropdown-lang {
   color: black;
+  font-weight: 500;
 }
 .dropdown-menu {
   border-radius: 10px;
   color: black;
+  margin-top: 33px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .dropdown-lang:active {
@@ -356,6 +362,7 @@ a:hover {
   padding: 16px 29px;
   color: #ffffff;
   margin-right: 15px;
+  margin-left: 15px;
 }
 
 .btn-group .become-partner:hover {
@@ -518,15 +525,8 @@ a:hover {
   text-align: left;
   line-height: 2;
 }
-.right-paymentsolution img {
-  width: 958px;
-}
 .right-paymentsolution {
   position: relative;
-}
-
-.right-paymentsolution img {
-  width: calc(100% - 22px) !important;
 }
 
 .right-paymentsolution::after {
@@ -534,7 +534,7 @@ a:hover {
   position: absolute;
   top: 0;
   left: 13px;
-  width: calc(100% - 47px) !important;
+  width: calc(100% - 25px) !important;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   opacity: 1;
@@ -543,6 +543,15 @@ a:hover {
   border-radius: 12px;
   overflow: hidden;
   object-fit: cover;
+  align-items: center;
+}
+.right-paymentsolution .momken-pay-img {
+  width: 938px !important;
+  height: 100%;
+  border-radius: 12px;
+  object-fit: cover;
+  position: relative;
+  align-items: center;
 }
 
 .right-paymentsolution:hover .overlay-content {
@@ -554,6 +563,7 @@ a:hover {
   line-height: 1.4;
   color: #ffffff;
   margin-bottom: 15px;
+  z-index: 1;
 }
 
 .text-overlay-paymentsolution h5 {
@@ -561,6 +571,7 @@ a:hover {
   font-weight: 400;
   line-height: 1.4;
   color: #ffffff;
+  z-index: 1;
 }
 .text-overlay-paymentsolution h5 i {
   margin-left: 10px;
@@ -826,7 +837,7 @@ a:hover {
     padding-left: 26px !important;
   }
   .developedby svg {
-    margin: 0 20px !important;
+    margin: 0 10px !important;
     vertical-align: middle;
   }
   .one-app-for-all {
@@ -1325,14 +1336,6 @@ border-radius: 50%;
   padding: 30px;
 }
 
-.momken-pay-img {
-  width: 100%;
-  max-height: 465px;
-  border-radius: 12px;
-  object-fit: cover;
-  position: relative;
-}
-
 .stars-raedy-take .fourty-reviews {
   color: #003830;
   font-size: 17px;
@@ -1512,6 +1515,7 @@ border-radius: 50%;
   width: 25px;
   height: 25px;
   margin-right: 15px;
+  margin-left: 15px;
   margin-top: 5px;
 }
 .text-icon p {
@@ -1698,6 +1702,7 @@ hr {
   font-size: 22;
   font-weight: 500;
   color: #ffffff;
+  text-align: left;
 }
 .copyrights {
   font-size: 22;
@@ -1736,7 +1741,7 @@ hr {
   text-align: center;
 }
 .developedby svg {
-  margin: 0 30px;
+  margin: 0 25px;
   vertical-align: middle;
 }
 
@@ -1884,6 +1889,8 @@ hr {
   font-weight: 700;
   border-radius: 40px;
   margin-top: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .bot-started-gov:hover {
@@ -1902,7 +1909,7 @@ hr {
   font-weight: 700;
   border: 1px solid #ffffff;
   margin-top: 30px;
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .contact-us-gov:hover {
@@ -1999,7 +2006,6 @@ hr {
 }
 .card-industry-pos {
   padding: 25px;
-
   width: calc(100% - 2px) !important;
   height: calc(100% - 25px) !important;
   border-radius: 16px;
@@ -2031,7 +2037,7 @@ hr {
 }
 @media only screen and (max-width: 767px) {
   .governmental-header .img-content {
-    top: 20%;
+    top: 12%;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -2188,6 +2194,7 @@ hr {
 
 .grow-img {
   left: calc(100% - 553px);
+  right: calc(100% - 453px);
   z-index: 1;
   width: calc(100% - 420px);
   height: auto;
@@ -2587,7 +2594,7 @@ hr {
 }
 
 .news-menu li:first-child {
-  margin-left: 0;
+  margin-left: 15px;
 }
 
 .news-menu li a {
@@ -2645,14 +2652,6 @@ hr {
   line-height: 2;
   height: 55px; /* Define a width for the paragraph */
   overflow: hidden;
-}
-
-.verticle-line-career {
-  border: 1px solid rgba(230, 230, 232, 1) !important;
-  width: 100%;
-  margin-left: 5px;
-  margin-top: 33px;
-  margin-bottom: 35px;
 }
 
 .author-info {
@@ -2766,7 +2765,7 @@ hr {
 }
 
 .pagination .number {
-  padding: 10px 17px !important;
+  padding: 6px 12px !important;
   border-radius: 50%;
   color: #5d6160;
 }
@@ -2846,6 +2845,9 @@ hr {
   }
   .pagination-container {
     display: none;
+  }
+  .career-header .header-image-overlay::after {
+    height: 800px;
   }
 }
 @media (max-width: 576px) {
@@ -2980,10 +2982,11 @@ hr {
 }
 .small-image-innerpage .img-small-black {
   position: absolute;
-  width: 65px;
-  height: 65px;
+  width: 62px;
+  height: 62px;
   top: -110px;
   left: 210px;
+  right: 210px;
 }
 
 .small-image-innerpage {
@@ -3018,6 +3021,7 @@ hr {
     height: 65px;
     top: -10px;
     left: 5px;
+    right: 1px;
   }
 }
 
@@ -3068,6 +3072,7 @@ hr {
   position: absolute;
   bottom: 10%;
   left: 35px;
+  right: 50px;
   color: #ffffff;
   padding: 20px;
   margin-left: 20px;
@@ -3180,6 +3185,7 @@ hr {
 }
 .data-driven-content {
   margin-left: 25px;
+  margin-right: 25px;
   margin-top: 40px;
 }
 .data-driven-content h3 {
@@ -3543,6 +3549,7 @@ hr {
   position: absolute;
   top: 50%;
   left: 14%;
+  right: 1%;
   transform: translate(-50%, -50%);
   width: 34px;
   height: 34px;
@@ -3551,6 +3558,7 @@ hr {
   position: absolute;
   top: 50%;
   left: 14%;
+  right: 1%;
   transform: translate(-50%, -50%);
   width: 34px;
   height: 34px;
@@ -3580,6 +3588,7 @@ hr {
 }
 .pos-join-text {
   margin-left: 20px;
+  margin-right: 20px;
 }
 .card-pos-join {
   box-shadow: 0px 6px 24px 0px #00000012;
@@ -3622,10 +3631,14 @@ hr {
   font-weight: 600;
   color: #003830;
   text-transform: uppercase;
+  align-items: center;
 }
+
 .sales-details img {
+  float: left;
   margin-right: 14px;
 }
+
 .senior-level-text {
   font-size: 16px;
   font-weight: 500;
@@ -3635,6 +3648,10 @@ hr {
   width: 30px;
   height: 30px;
   margin-right: 12px;
+}
+.sales-dev {
+  margin-left: 30px;
+  margin-right: 25px;
 }
 .sales-dev-header h4 {
   font-size: 18px;
@@ -3658,24 +3675,21 @@ hr {
   padding-bottom: 40px;
   position: relative;
 }
-.angle-right-career {
-  margin-right: 35px !important;
-}
-.border-right {
+
+.border-right-ltr {
   position: absolute;
   top: 40px;
   right: 0px;
   height: 190px;
   margin-right: 20px;
   margin-left: 20px;
-  width: 1px;
-  background-color: rgba(230, 230, 232, 1);
+  border-right: 1px solid rgba(230, 230, 232, 1);
 }
 
 .verticle-line-career {
   border: 1px solid rgba(230, 230, 232, 1);
-  width: 380px;
-  margin-left: 5px;
+  width: 345px;
+  margin-right: 10px;
   margin-top: 33px;
   margin-bottom: 35px;
 }
@@ -3778,7 +3792,6 @@ hr {
 
 .categories-word .img {
   float: right;
-  margin-right: 15px;
 }
 
 .search-vacancies-word {
@@ -3824,12 +3837,17 @@ hr {
 }
 @media only screen and (max-width: 767px) {
   .governmental-header .img-content-sales {
-    top: 20%;
+    top: 12%;
     left: 50%;
     transform: translateX(-50%);
   }
 }
 @media screen and (max-width: 767px) {
+  .governmental-header .img-content-sales {
+    top: 12%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
   .img-content-sales h3 {
     font-size: 30px;
     margin-bottom: 8px !important;
@@ -3960,7 +3978,7 @@ hr {
 }
 .categories-word img {
   margin-left: 10px;
-  margin-right: 15px;
+  margin-right: 10px;
   margin-bottom: 3px;
 }
 
@@ -4010,7 +4028,7 @@ hr {
   .main-title {
     font-size: 27px !important;
   }
-  .border-right {
+  .border-right-rtl {
     display: none;
   }
   .sub-title-career {
@@ -4200,7 +4218,7 @@ hr {
   border-radius: 84px;
   padding: 17px 29px;
   color: #ffffff;
-  margin-right: 15px;
+  margin-right: 20px;
   margin-top: 20px;
 }
 
@@ -4217,6 +4235,7 @@ hr {
   color: #171d1c;
   border: 1px solid var(--Primary-green, #00816d);
   margin-top: 20px;
+  margin-right: 20px;
 }
 
 .btn-group-error .contact-us-error:hover {
@@ -4538,6 +4557,7 @@ hr {
 }
 .contact-info {
   margin-left: 20px;
+  margin-right: 20px;
 }
 
 .contact-content {
