--- a/assets/css/style.ar.css
+++ b/assets/css/style.ar.css
@@ -1,3 +1,35 @@
+.almarai-light {
+  font-family: "Almarai", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.almarai-regular {
+  font-family: "Almarai", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.almarai-bold {
+  font-family: "Almarai", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.almarai-extrabold {
+  font-family: "Almarai", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+body * {
+  font-family: Arial, sans-serif;
+}
+body {
+  font-family: "Almarai", sans-serif;
+}
+body :lang(ar) {
+  font-family: "Almarai", sans-serif;
+}
 .vertical-image {
   margin-left: 15px;
 }
