--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,13 +145,17 @@ a:hover {
 }
 .search-icon {
   font-size: 20px;
-  transition: transform 0.3s ease;
+  transition: transform 0.5s ease;
   cursor: pointer;
 }
-
+#searchInput {
+  display: none;
+  transition: display 0.5s ease-in-out;
+}
 .search-icon:hover {
   transform: scale(1.2);
   color: #00816d;
+  transition: width 0.5s ease;
 }
 
 .search-input {
@@ -161,7 +165,7 @@ a:hover {
   border-radius: 20px;
   font-size: 16px;
   outline: none;
-  transition: width 0.3s ease;
+  transition: width 0.5s ease;
 }
 
 .navbar-brand img {
