--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,7 @@ a:hover {
 .consumer-features .list-unstyled.column-two li {
   display: flex;
   align-items: center;
+  margin-right: 18px;
 }
 .nav-link.dropdown-toggle {
   margin-left: 10px !important;
