--- a/assets/css/style.ar.css
+++ b/assets/css/style.ar.css
@@ -8,43 +8,10 @@ h5,
 h6,
 p,
 div,
-span,
-* {
-  font-family: "Almarai", sans-serif;
+span {
+  font-family: "Almarai", sans-serif !important;
 }
 
-.almarai-light {
-  font-family: "Almarai", sans-serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.almarai-regular {
-  font-family: "Almarai", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.almarai-bold {
-  font-family: "Almarai", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.almarai-extrabold {
-  font-family: "Almarai", sans-serif;
-  font-weight: 800;
-  font-style: normal;
-}
-body * {
-  font-family: Arial, sans-serif;
-}
-body {
-  font-family: "Almarai", sans-serif;
-}
-body :lang(ar) {
-  font-family: "Almarai", sans-serif;
-}
 .vertical-image {
   margin-left: 15px;
 }
@@ -99,7 +66,7 @@ body :lang(ar) {
   margin-right: 10px;
 }
 .consumer-features .list-unstyled.column-two li {
-  margin-right: 18px;
+  margin-right: 39px;
 }
 .column-one .fa-caret-right {
   margin-left: 1px;
