--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2303,6 +2303,7 @@ hr {
   }
   .get-startgov-btn {
     padding: 11px 20px;
+    margin-bottom: 15px;
   }
   .gov-imgs {
     order: 2;
@@ -3706,6 +3707,13 @@ hr {
 }
 
 @media (max-width: 767px) {
+  .payment-invoicing-text {
+    box-shadow: 0px 7px 12px 0px #00000014;
+    padding: 30px;
+    border-radius: 0px 0px 30px 30px;
+    height: auto;
+    overflow: hidden;
+  }
   .momkn-soluton-title h2 {
     font-size: 34px;
   }
