--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ body {
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
+/*
 #preloader {
   position: fixed;
   top: 0;
@@ -83,9 +84,28 @@ body {
     transform: rotate(360deg);
   }
 }
-
+*/
 /* Mobile Navbar */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #02855a;
+}
 
+#preloader img {
+  width: 300px;
+  height: auto;
+}
 .accordion-button.collapsed::after {
   filter: brightness(0) invert(1);
 }
@@ -326,7 +346,7 @@ a:hover {
   width: 100%;
 }
 .btn-contact:hover {
-  color: #09dcbd;
+  color: #000000;
 }
 
 .navbar-nav .nav-item.dropdown .nav-link#navbarDropdown4 {
@@ -504,6 +524,10 @@ a:hover {
   }
 }
 @media (max-width: 768px) {
+  #preloader img {
+    width: 170px;
+    height: auto;
+  }
   .nav-item.dropdown .dropdown-menu {
     width: 95%;
     justify-content: initial;
@@ -557,11 +581,11 @@ a:hover {
   font-size: 24px;
   font-weight: 500;
   color: #5d6160;
-  margin-top: 18px;
+  margin-top: 25px;
 }
 
 .recharge-bill-left span {
-  font-size: 25px;
+  font-size: 24px;
   font-weight: 700;
   color: #171d1c;
 }
@@ -600,13 +624,12 @@ a:hover {
 }
 
 .btn-group .contact-us:hover {
-  color: #00816d;
+  color: #f9ad5e;
 }
 .slick-dots .custom-dot-payment-slider {
   position: absolute;
-  right: 35px;
-  margin-top: 50px;
-  right: 240px !important;
+  bottom: 25px;
+  right: 575px;
 }
 
 .custom-dot-payment-slider {
@@ -694,7 +717,8 @@ a:hover {
   margin-right: 10px;
 }
 .recharge-bill-left {
-  padding-top: 2.4% !important;
+  padding-top: 20% !important;
+  margin-bottom: 97px;
 }
 .recharge-bill-right-img {
   padding-top: 12% !important;
@@ -889,7 +913,7 @@ a:hover {
     font-size: 14px;
   }
   .btn-group {
-    margin-top: 15px;
+    margin-top: 18px !important;
   }
   .stars {
     font-size: 12px;
@@ -927,7 +951,7 @@ a:hover {
 }
 
 .payment-solution {
-  margin-top: 9%;
+  margin-top: 7.5%;
 }
 
 .payment-solution h2 {
@@ -1691,7 +1715,7 @@ border-radius: 50%;
 }
 
 .btn-group .get-started:hover {
-  color: #09dcbd;
+  color: #171d1c;
 }
 
 .btn-group .contact-us2 {
@@ -1705,7 +1729,7 @@ border-radius: 50%;
 }
 
 .btn-group .contact-us2:hover {
-  color: #00816d;
+  color: #f9ad5e;
 }
 
 .bottom {
@@ -2122,7 +2146,8 @@ hr {
 }
 
 .bot-started-gov:hover {
-  color: #000000b5;
+  color: #f9ad5e;
+  border: 1px solid #f9ad5e;
 }
 
 /*  "Contact Us" */
@@ -2141,7 +2166,8 @@ hr {
 }
 
 .contact-us-gov:hover {
-  color: rgba(255, 255, 255, 0.7);
+  color: #f9ad5e;
+  border: 1px solid #f9ad5e;
 }
 /* Governmental headers */
 
@@ -2158,10 +2184,10 @@ hr {
 }
 
 .get-startgov-btn:hover {
-  color: #09dcbd;
+  color: #171d1c;
 }
 .get-startgov-btn:hover svg path {
-  stroke: #09dcbd;
+  stroke: #171d1c;
 }
 .get-startgov-btn svg {
   margin-left: 10px;
@@ -2322,6 +2348,9 @@ hr {
   .developedby p {
     font-size: 8px;
   }
+  .grow-your-presence-mobile {
+    display: block;
+  }
   .grow-your-presence {
     display: none;
   }
@@ -2348,19 +2377,7 @@ hr {
 @media (min-width: 1900px) {
   .images-section {
     position: relative;
-    margin-bottom: 80px;
-  }
-
-  .mobile-img {
-    width: calc(100% - -15px);
-    height: auto;
-    object-fit: fill;
-    position: absolute;
-    z-index: 2;
-    top: calc(100% - 70px);
-    left: calc(100% - 600px);
-    padding: 70px;
-    transform: rotate(-1deg);
+    padding-bottom: 80px;
   }
 
   .grow-img {
@@ -2375,7 +2392,7 @@ hr {
 
   .receive-img {
     left: calc(100% - 860px);
-    top: calc(100% - -40px);
+    top: calc(100% - -100px);
     z-index: 1;
     width: calc(100% - 380px);
     height: auto;
@@ -2391,17 +2408,33 @@ hr {
 }
 
 @media (min-width: 768px) and (max-width: 1199px) {
-  .grow-your-presence {
-    display: none;
+  .custom-dot-payment-slider {
+    right: 500px;
   }
-  .recharge-bill-right-img {
-    display: block;
+}
+.grow-your-presence {
+  display: none;
+}
+.recharge-bill-right-img {
+  display: block;
+}
+.grow-your-presence-mobile {
+  display: block !important;
+}
+
+@media (min-width: 992px) {
+  .grow-your-presence-mobile {
+    display: none !important;
+  }
+  .grow-your-presence {
+    display: block !important;
   }
 }
 
 .grow-your-presence {
-  padding: 5px;
-  margin-top: 3%;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 20px !important;
 }
 
 .images-section {
@@ -2412,34 +2445,32 @@ hr {
 .mobile-img {
   width: calc(100% - -15px);
   height: auto;
-  object-fit: fill;
   position: absolute;
   z-index: 2;
-  top: calc(100% - 70px);
-
+  top: calc(100% - 75px);
   left: calc(100% - 600px);
-
-  padding: 70px;
-  transform: rotate(-1deg);
+  padding: 60px;
+  transform: rotate(1deg);
 }
 
 .grow-img {
-  left: calc(100% - 553px);
-  right: calc(100% - 453px);
+  left: calc(100% - 538px);
+  right: calc(100% - 330px);
   z-index: 1;
   width: calc(100% - 420px);
-  height: auto;
+  height: 160px;
   position: relative;
   border-radius: 20px;
-  margin-top: 5%;
+  margin-top: 6%;
 }
 
 .receive-img {
-  right: calc(100% - 260px);
+  right: calc(100% - 270px);
+  left: calc(100% - 660px);
   top: calc(100% - -40px);
   z-index: 1;
   width: calc(100% - 380px);
-  height: auto;
+  height: 100px;
   position: absolute;
   border-radius: 20px;
 }
@@ -2491,7 +2522,7 @@ hr {
     width: 100%;
     height: auto;
     object-fit: fill;
-    position: absolute;
+    position: relative;
     z-index: 2;
     top: calc(100% - 50px);
     left: calc(100% - 320px);
@@ -2653,6 +2684,13 @@ hr {
   padding-right: 25px;
 }
 @media screen and (max-width: 767px) {
+  .payment-solution {
+    margin-top: 28% !important;
+  }
+  .recharge-bill-left {
+    padding-top: 60px !important;
+    margin-bottom: 45px;
+  }
   .left-titles {
     padding-top: 35%;
   }
@@ -2933,7 +2971,7 @@ hr {
   color: #ffffff;
   background-color: #00816d;
   font-size: 14px;
-  border-radius: 50%;
+  border-radius: 6px;
   border: 1px solid #00816d;
   display: flex;
   flex-direction: row;
@@ -2945,18 +2983,30 @@ hr {
   margin-left: 10px;
   margin-right: 10px;
 }
+.author-details-icon {
+  display: inline-block;
+  margin-left: 10px;
+  margin-right: 10px;
+}
 
-.author-details-icon .fa-angle-right {
+.author-details-icon .fa-file-arrow-down {
   color: #ffffff;
   padding: 10px 14px;
   font-size: 20px;
   margin-right: 10px;
 }
-.author-details-icon .fa-angle-left {
+.author-details-icon .fa-file-arrow-down {
   color: #ffffff;
-  padding: 10px 14px;
+  padding: 6px 10px;
   font-size: 20px;
   margin-right: 10px;
+}
+.author-details-icon .fa-file-arrow-down {
+  color: #ffffff;
+  padding: 7px 8px;
+  font-size: 24px;
+  margin-right: 10px;
+  align-items: center;
 }
 .last-news-imgs {
   margin-top: 45px;
@@ -3136,10 +3186,10 @@ hr {
   .last-news-imgs .news-item h3 {
     font-size: 19px;
   }
-  .author-details-icon .fa-angle-right {
+  .author-details-icon .fa-file-arrow-down {
     color: #ffffff;
-    padding: 6px 10px;
-    font-size: 18px;
+    padding: 6px 8px;
+    font-size: 20px;
   }
 
   .page-link .pagination-word-right,
@@ -4049,10 +4099,49 @@ hr {
   margin-right: 15px;
 }
 
-.sales-dev-body .fa-angle-right {
+.sales-dev-body .fa-file-arrow-down {
   color: #ffffff;
   background-color: #00816d;
   font-size: 17px;
+  border-radius: 12px;
+  border: 1px solid #00816d;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  padding: 8px 12px;
+  align-items: center;
+}
+
+.author-details-icon .fa-angle-right {
+  color: #ffffff;
+  padding: 10px 14px;
+  font-size: 20px;
+  margin-right: 10px;
+}
+.author-details-icon .fa-angle-right {
+  color: #ffffff;
+  padding: 6px 10px;
+  font-size: 20px;
+  margin-right: 10px;
+}
+.author-details-icon .fa-angle-right {
+  color: #ffffff;
+  padding: 7px 8px;
+  font-size: 24px;
+  margin-right: 10px;
+  align-items: center;
+}
+
+.author-details-icon .fa-angle-right {
+  color: #ffffff;
+  padding: 6px 10px;
+  font-size: 18px;
+}
+
+.sales-dev-body .fa-angle-right {
+  color: #ffffff;
+  background-color: #00816d;
+  font-size: 19px;
   border-radius: 50%;
   border: 1px solid #00816d;
   display: flex;
@@ -4593,7 +4682,7 @@ hr {
 }
 
 .btn-group-error .gotohomepage:hover {
-  color: #09dcbd;
+  color: #171d1c;
 }
 
 .btn-group-error .contact-us-error {
@@ -4609,7 +4698,7 @@ hr {
 }
 
 .btn-group-error .contact-us-error:hover {
-  color: #00816d;
+  color: #f9ad5e;
 }
 
 /* Error Page Page */
@@ -4733,7 +4822,7 @@ hr {
 }
 
 .submit-button-contact:hover {
-  color: #09dcbd;
+  color: #171d1c;
   background-color: #00816d;
 }
 
