--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -580,7 +580,7 @@ a:hover {
   .recharge-bill-left-subtitle p {
     text-overflow: ellipsis !important;
     overflow: hidden !important;
-    max-height: 55px !important;
+    max-height: 65px !important;
     white-space: nowrap !important;
   }
   .recharge-bill-paragraph p {
@@ -593,6 +593,12 @@ a:hover {
   }
 }
 @media (min-width: 768px) {
+  .recharge-bill-paragraph {
+    text-overflow: ellipsis !important;
+    overflow: hidden !important;
+    max-height: 145px !important;
+    white-space: nowrap !important;
+  }
   .recharge-bill-left h2,
   .recharge-bill-paragraph p {
     text-overflow: ellipsis !important;
